# toolscout

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VENDOR.md  pyproject.toml  taskset.example.json  toolspace.example.json
.claude/rules/: handoff.md
.github/workflows/: ci.yml
eval/: README.md  pyproject.toml
eval/tests/: conftest.py  test_boundary.py  test_cli.py  test_judge.py  test_schema.py  test_score.py  test_taskset.py
eval/toolscout_eval/: __init__.py  __main__.py  cli.py  judge.py  schema.py  score.py  taskset.py
studio/: DESIGN.md  README.md  pyproject.toml
studio/static/: app.js  index.html  replay-core.js  run-core.js  style.css  trajectory.js
studio/tests/: replay-core.test.js  run-core.test.js  static-contract.test.js  test_app.py  test_iterations.py  test_live.py  test_mapper.py  trajectory.test.js
studio/toolscout_studio/: __init__.py  app.py  iterations.py  live.py  mapper.py
tests/: conftest.py  test_assemble.py  test_catalog.py  test_cli.py  test_config.py  test_forward_offline.py  test_judge_tool.py  test_mcp_toolspace.py  test_public_api.py  test_render.py  test_response.py  test_rl_export.py  test_rubric.py  test_scaffolding.py  test_schema.py  test_subscription.py  test_toolspace.py
toolscout/: README.md  __init__.py  __main__.py  agent.py  assemble.py  catalog.py  cli.py  config.py  judge_tool.py  mcp_toolspace.py  render.py  response.py  rl_export.py  rubric.py  scaffolding.py  schema.py  toolspace.py
toolscout/skills/: ground-the-answer.md  plan-a-toolspace-task.md  ptc-repl-discipline.md  recover-from-tool-errors.md  select-servers.md  verify-before-finalize.md  when-to-describe-a-tool.md
