[project]
name = "toolscout"
version = "0.1.0"
description = "Solve tasks over a large MCP toolspace by progressively loading servers + tool schemas and executing them in a persistent REPL — an ATLAS-style rollout harness on rlm-kit (a downstream consumer)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Boik Su" }]
keywords = ["rlm", "dspy", "mcp", "tool-use", "agent", "reinforcement-learning", "toolspace", "atlas"]
dependencies = [
    # rlm-kit is consumed via a git source until it ships on PyPI (see [tool.uv.sources]).
    "rlm-kit",
    "pydantic>=2.0",
    # The toolspace is MCP: the ISL/ITL layer connects to external MCP servers (client-only).
    "mcp>=1.0",
]

[project.optional-dependencies]
# The opt-in rubric self-check tool (TS_ENABLE_JUDGE) and the host-side `toolscout rubric` generator
# both talk an OpenAI-compatible API via rlm-kit's make_model_tool. Off unless you enable them.
judge = ["openai>=1.0"]
observe = ["langfuse>=4.6.1", "openinference-instrumentation-dspy>=0.1.36"]
# Run planner + specialist on a Claude Pro/Max subscription (TS_ROOT_LM / TS_SUB_LM =
# `claude-agent-sdk/<id>`) via rlm-kit's `rlm_kit.ClaudeAgentLM`. Installs the Claude Agent SDK the
# adapter needs; also needs the Claude Code CLI installed + logged in — a runtime prerequisite pip
# can't express (see .env.example).
subscription = ["claude-agent-sdk>=0.1.60"]

# rlm-kit is public but not yet on PyPI, so it comes in via git (uv.lock pins the exact commit); swap to
# a version spec once it ships on PyPI. The dogfooding loop rlm-kit is designed around still holds: when
# co-developing rlm-kit locally, overlay an editable install (`uv pip install -e ../rlm-kit`) or bump
# this ref after pushing, so a fix that surfaces here can be promoted into the kit.
[tool.uv.sources]
rlm-kit = { git = "https://github.com/qazbnm456/rlm-kit.git", branch = "main" }

# The visualization console ships IN-REPO as its own package (studio/) — a uv workspace member, NOT part
# of the `toolscout` wheel. It reads this package's trace/TaskResponse contract, so co-locating keeps
# them in sync; its web stack (fastapi/uvicorn/frontend) stays behind the package boundary + the studio's
# `live` optional extra, so a harness-only install never pulls it. The external git source (rlm-kit)
# lives here at the workspace root and applies to every member.
[tool.uv.workspace]
members = ["studio", "eval"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[project.scripts]
toolscout = "toolscout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `packages` ships every file under the package dir — the skills/*.md ride along automatically. (A
# redundant force-include of those same paths duplicates them and breaks the wheel build.)
packages = ["toolscout"]
