[project]
name = "toolscout-studio"
version = "0.1.0"
description = "SSE server + web frontend for toolscout — serve a run's TaskResponse, replay its trace as live Server-Sent Events, and render the ISL/ITL/PTC trajectory (which servers loaded, which tools were called), the answer, and the rubric criteria facts as a toolspace console."
requires-python = ">=3.11"  # matches the `live` sibling toolscout (>=3.11); keeps `uv run` resolvable
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# `live` pulls toolscout (and through it dspy/rlm-kit) so POST /v1/solve can drive a real run.
# Replay (the GET endpoints) needs none of it — keep it optional so a replay-only deploy stays light.
# NOTE: toolscout consumes rlm-kit as a COMMIT-PINNED GIT source (workspace-root [tool.uv.sources]),
# so a `live` install is self-contained — no ../rlm-kit sibling checkout needed.
live = ["toolscout"]
dev = ["pytest>=8", "httpx>=0.27"]

# In-repo: toolscout is the workspace ROOT package (studio/ is a member of it). The `live` extra
# resolves it as a workspace dep — no sibling-dir assumption. External sources (rlm-kit) are declared at
# the workspace root's pyproject and apply here transitively.
[tool.uv.sources]
toolscout = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toolscout_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
